--- a/docs/Fabulosa.Docs/Fabulosa.Docs.fsproj
+++ b/docs/Fabulosa.Docs/Fabulosa.Docs.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Pages/Home.fs" />
     <Compile Include="App.fs" />
     <None Include="paket.references" />
+    <ProjectReference Include="..\..\src\Fabulosa\Fabulosa.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
