--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "entry": "docs/Fabulosa.Docs/Fabulosa.Docs.fsproj"
   },
   "scripts": {
-    "postinstall": "dotnet restore",
-    "build": "cd docs/tools && dotnet fable webpack -- -p --config webpack.config.prod.js",
-    "start": "cd docs/tools && dotnet fable webpack-dev-server -- --config webpack.config.dev.js",
+    "build": "cd tools && dotnet fable webpack -- -p --config webpack.config.prod.js",
+    "start": "cd tools && dotnet fable webpack-dev-server -- --config webpack.config.dev.js"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
