--- a/src/Fabulosa/Fabulosa.fsproj
+++ b/src/Fabulosa/Fabulosa.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ReactAPIExtensions.fs" />
     <Compile Include="ReactElementStringExtensions.fs" />
     <Compile Include="ClassNames.fs" />
     <Compile Include="Components/Responsive.fs" />
