--- a/docs/Fabulosa.Docs/Fabulosa.Docs.fsproj
+++ b/docs/Fabulosa.Docs/Fabulosa.Docs.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="pages\button.fsx" />
     <None Include="pages\button.html" />
     <Compile Include="pages\ButtonDemo.fs" />
+    <Compile Include="IndexDemo.fs" />
     <None Include="index.html" />
     <ProjectReference Include="..\..\src\Fabulosa\Fabulosa.fsproj" />
   </ItemGroup>
