--- a/src/Fabulosa/Fabulosa.fsproj
+++ b/src/Fabulosa/Fabulosa.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Extensions/ListExtension.fs" />
     <Compile Include="Extensions/SeqExtension.fs" />
     <Compile Include="Extensions/StringExtension.fs" />
+    <Compile Include="Extensions/PropExtension.fs" />
     <Compile Include="ClassNames.fs" />
     <Compile Include="Components/Icon.fs" />
     <Compile Include="Components/Button.fs" />
